--- a/subworkflow/TEtranscripts/TEtranscripts.yaml
+++ b/subworkflow/TEtranscripts/TEtranscripts.yaml
@@ -1,2 +1,13 @@
 Procedure:
   STAR: "/opt/STAR-2.7.11b/bin/Linux_x86_64/STAR"
+  TElocal: ""
+genome:
+  human:
+    genome_index: "/home/luosg/genome/Human/GENCODE/GRCh38/STAR_index"
+    gtf: "/home/luosg/genome/Human/GENCODE/GRCh38/gencode.v49.primary_assembly.annotation.gtf"
+TEtranscripts:
+  human:
+    TE_gtf: "/home/luosg/genome/Human/GENCODE/GRCh38/GRCh38_GENCODE_rmsk_TE.gtf"
+TElocal:
+  human:
+    TEind: "/home/luosg/genome/Human/GENCODE/GRCh38/GRCh38_GENCODE_rmsk_TE.gtf.locInd"
