fix:SNP 添加threads，防止线程过多引爆内存

--- a/subworkflow/SNP/SNP.yaml
+++ b/subworkflow/SNP/SNP.yaml
@@ -7,7 +7,11 @@ Procedure:
   samtools: "/usr/bin/samtools"
   bgzip: "/usr/bin/bgzip"
 genome:
-  human: 
+  Homo_sapiens: 
     fasta: "/disk5/luosg/Reference/GENCODE/human/GRCh38/GRCh38.primary_assembly.genome.fa"
     dict: "/disk5/luosg/Reference/GENCODE/human/GRCh38/GRCh38.primary_assembly.genome.dict"
     fai: "/disk5/luosg/Reference/GENCODE/human/GRCh38/GRCh38.primary_assembly.genome.fa.fai"
+  Mus_musculus:
+    fasta: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/GRCm39.primary_assembly.genome.fa"
+    dict: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/GRCm39.primary_assembly.genome.dict"
+    fai: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/GRCm39.primary_assembly.genome.fa.fai"
