--- a/subworkflow/Align/Align.yaml
+++ b/subworkflow/Align/Align.yaml
@@ -2,6 +2,9 @@ genome:
   human:
     genome_index: "/home/luosg/genome/Human/GENCODE/GRCh38/STAR_index"
     gtf: "/home/luosg/genome/Human/GENCODE/GRCh38/gencode.v49.primary_assembly.annotation.gtf"
+  mouse:
+    genome_index: "/home/luosg/genome/Mouse/GENCODE/GRCm39/STAR_index"
+    gtf: "/home/luosg/genome/Mouse/GENCODE/GRCm39/gencode.vM38.primary_assembly.annotation.gtf"
 Procedure:
   trim_galore: "/opt/TrimGalore-0.6.10/trim_galore"
   STAR: "/opt/STAR-2.7.11b/bin/Linux_x86_64/STAR"
