--- a/envs/system.yaml
+++ b/envs/system.yaml
@@ -1,3 +1,8 @@
 Procedure:
   trim_galore: "/opt/TrimGalore-0.6.10/trim_galore"
   STAR: "/opt/STAR-2.7.11b/bin/Linux_x86_64/STAR"
+  Rscript: "/usr/bin/Rscript"
+
+R:
+  - XenofilterR
+
