--- a/subworkflow/Align/Align.yaml
+++ b/subworkflow/Align/Align.yaml
@@ -1,6 +1,7 @@
 genome:
   mouse:
-    genome_index: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/index_star2_7"
+    fasta: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/GRCm39.primary_assembly.genome.fa"
+    star_index: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/index_star2_7"
     gtf: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/gencode.vM38.primary_assembly.basic.annotation.gtf"
 Procedure:
   aligner: "hisat2"
@@ -8,4 +9,5 @@ Procedure:
   STAR: "/opt/STAR-2.7.11b/bin/Linux_x86_64/STAR"
   hisat2: "/opt/hisat2-2.2.1/hisat2"
   hisat2-build: "/opt/hisat2-2.2.1/hisat2-build"
+  samtools: ""
 
