fix:修复了一些小问题

--- a/subworkflow/Align/Align.yaml
+++ b/subworkflow/Align/Align.yaml
@@ -1,8 +1,9 @@
 genome:
   mouse:
     fasta: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/GRCm39.primary_assembly.genome.fa"
-    star_index: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/index_star2_7"
+    star_index_dir: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/index_star2_7"
     gtf: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/gencode.vM38.primary_assembly.basic.annotation.gtf"
+    hisat2_index: ""
 Procedure:
   aligner: "hisat2"
   trim_galore: "/opt/TrimGalore-0.6.10/trim_galore"
