--- a/envs/run.yaml
+++ b/envs/run.yaml
@@ -1,4 +1,4 @@
-name: genomeStability
+name: run
 channels:
   - bioconda
   - conda-forge
@@ -8,3 +8,5 @@ dependencies:
   - multiqc=1.32
   - TEtranscripts=2.2.3
   - TElocal=1.1.1
+  - cutadapt=4.4
+
