--- a/subworkflow/ncRNAseq/ncRNAseq.yaml
+++ b/subworkflow/ncRNAseq/ncRNAseq.yaml
@@ -2,9 +2,12 @@ Parameters:
   fastx_trimmer:
     f_keep_base: 5
 Procedure:
+  aligner: "hisat2"
   fastx_trimme: ""
   cutadapt: ""
   STAR: "/opt/STAR-2.7.10b/bin/Linux_x86_64/STAR"
+  hisat2: "/opt/hisat2-2.2.1/hisat2"
+  hisat2-build: "/opt/hisat2-2.2.1/hisat2-build"
 
 genome:
   mouse:
