--- a/envs/smallRNAseq.yaml
+++ b/envs/smallRNAseq.yaml
@@ -1,9 +1,9 @@
-name: run
+name: py27
 channels:
   - bioconda
   - conda-forge
   - defaults
 dependencies:
-  - cutadapt=1.8.3
   - python=2.7
+  - cutadapt=1.8.3
   - fastx_toolkit=0.0.14
