--- a/subworkflow/Align/Align.yaml
+++ b/subworkflow/Align/Align.yaml
@@ -1,14 +1,13 @@
 genome:
   mouse:
-    fasta: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/GRCm39.primary_assembly.genome.fa"
-    star_index_dir: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/index_star2_7"
-    gtf: "/disk5/luosg/Reference/GENCODE/mouse/GRCm39/gencode.vM38.primary_assembly.basic.annotation.gtf"
-    hisat2_index: ""
+    fasta: "/data/pub/zhousha/Reference/mouse/GENCODE/GRCm38/GRCm38.primary_assembly.genome.fa"
+    star_index_dir: ""
+    gtf: "/data/pub/zhousha/Reference/mouse/GENCODE/GRCm38/gencode.vM23.primary_assembly.annotation.gtf"
+    hisat2_index_prefx: ""
 Procedure:
   aligner: "hisat2"
-  trim_galore: "/opt/TrimGalore-0.6.10/trim_galore"
-  STAR: "/opt/STAR-2.7.11b/bin/Linux_x86_64/STAR"
-  hisat2: "/opt/hisat2-2.2.1/hisat2"
-  hisat2-build: "/opt/hisat2-2.2.1/hisat2-build"
+  trim_galore: "/home/zhousha/tools/TrimGalore-0.6.10/trim_galore"
+  STAR: "/home/zhousha/tools/STAR-2.7.11b/bin/Linux_x86_64/STAR"
+  hisat2: "/home/zhousha/tools/hisat2-2.2.1/hisat2"
+  hisat2-build: "/home/zhousha/tools/hisat2-2.2.1/hisat2-build"
   samtools: ""
-
