--- a/subworkflow/Count/Count.yaml
+++ b/subworkflow/Count/Count.yaml
@@ -1,2 +1,3 @@
 Procedure:
- featureCounts: "/opt/subread-2.1.1-Linux-x86_64/bin/featureCounts"
+ featureCounts: "/home/zhousha/tools/subread-2.1.1-Linux-x86_64/bin/featureCounts"
+
